<resources>
    <string name="app_name">DuckHunt</string>
    <string name="iniciar">Start</string>
    <string name="todo">TODO</string>
    <string name="nick">Write your nickname</string>
    <string name="version">Version 2.3.0</string>
    <string name="contador">0</string>
    <string name="nombre_usuario">Player</string>
    <string name="tiempo">60s</string>
    <string name="title_activity_ranking">RankingActivity</string>
    <string name="ducks">Ducks</string>
    <string name="nickname">Nickname</string>
    <string name="position">Position</string>
    <string name="score">SCORE</string>
    <string name="tv_num_score">0</string>
    <string name="time">TIME</string>
    <string name="game_over">GAME OVER</string>
    <string name="text_dialog">Has conseguido cazar</string>
    <string name="points">0</string>
    <string name="text_dialog2">patos!!</string>
    <string name="restart">Restart</string>
    <string name="ranking">Ranking</string>
    <string name="name">NAME</string>
    <string name="hits">HITS</string>
    <string name="value_point">+1</string>
    <string name="tv_value_2">+2</string>
    <string name="tv_value_3">+3</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="registration">Registration</string>
    <string name="title_points">Points</string>
    <string name="message">message</string>
    <string name="exit">Exit</string>
</resources>