<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_game"
    android:padding="16dp"
    tools:context=".ui.activities.LoginActivity">

    <ImageView
        android:id="@+id/_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:src="@drawable/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/ed_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/design_default_color_background"
        android:ems="10"
        android:fontFamily="@font/pixel"
        android:hint="@string/nick"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorLink="@color/white"
        android:textSize="12sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/_titulo"
        app:layout_constraintStart_toStartOf="@+id/_titulo"
        app:layout_constraintTop_toBottomOf="@+id/_titulo"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_iniciar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/rojo"
        android:fontFamily="@font/pixel"
        android:text="@string/iniciar"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/ed_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_nombre" />
</androidx.constraintlayout.widget.ConstraintLayout>